# signalshift_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_upi_payment_fields.py  003_plans_table.py  004_subscriptions.py  005_plan_slot_window.py  006_subscription_slots.py  007_payment_booking_id_nullable.py  008_booking_subscription_id.py
app/: __init__.py  config.py  main.py
app/auth/: dependencies.py  router.py  schemas.py  service.py
app/bookings/: __init__.py  conflict_checker.py  models.py  pricing_engine.py  router.py  schemas.py  service.py  state_machine.py
app/core/: database.py  email.py  email_sendgrid.py  email_templates.py  event_bus.py  event_handlers.py  exceptions.py  middleware.py  notifications.py  pagination.py  redis.py  security.py
app/coupons/: models.py  router.py  schemas.py  service.py
app/payments/: models.py  router.py  schemas.py  service.py
app/plans/: models.py  router.py  schemas.py  service.py
app/shared/: constants.py  types.py
app/subscriptions/: models.py  router.py  schemas.py  service.py
app/teams/: __init__.py  models.py  router.py  schemas.py  service.py
app/tenants/: models.py  router.py  schemas.py  service.py
app/tournaments/: __init__.py  (+6 more)
deploy/: Caddyfile  signalshift-admin.service  signalshift-api.service  signalshift-frontend.service
docs/: DEPLOYMENT.md
scripts/: entrypoint.sh  seed.py
tests/: conftest.py
(+19 files in other folders)
